tests/machine/x/pl/group_by_multi_join.error
exit status 2
ERROR: /workspace/mochi/tests/machine/x/pl/group_by_multi_join.pl:43: user:main is/2: Type error: `character' expected, found `map{part:200,total:0}' (a dict)
